--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
 .menu-end {
-  position: absolute;
-  right: 0;
+  position: absolute !important;
+  right: 0 !important;
 }
 
 .navbar-burger {
@@ -9,9 +9,15 @@
 }
 
 .table {
-  width: 100%;
+  width: 100% !important;
 }
 
 .card-header {
   box-shadow: 0 0 0.25em rgba(10, 10, 10, 0) !important;
+}
+
+@media screen and (max-width: 1023px) {
+  .navbar-menu.is-active {
+    padding: 10px 15px !important;
+  }
 }
