--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,16 +7,9 @@
 // Bootstrap
 // @import '~bootstrap/scss/bootstrap';
 
-// @media screen and (min-width: 1024px){
-//     .menu-end {
-//         position: absolute;
-//         right: 0;
-//     }
-// }
-
 .menu-end {
-    position: absolute;
-    right: 0;
+    position: absolute !important;
+    right: 0 !important;
 }
 
 .navbar-burger {
@@ -24,9 +17,15 @@
 }
 
 .table {
-    width: 100%;
+    width: 100% !important;
 }
 
 .card-header {
     box-shadow: 0 0 0.25em rgb(10 10 10 / 0%) !important
+}
+
+@media screen and (max-width: 1023px){
+    .navbar-menu.is-active {
+        padding: 10px 15px !important;
+    }
 }
